--- a/assets/sass/_media.sass
+++ b/assets/sass/_media.sass
@@ -2,6 +2,7 @@
 // No media query since the extra-large breakpoint has no upper bound on its width
 
 @media (min-width: 1200px) and (max-width: 1279px)
+
    .menu
       &_navigation
          li
@@ -12,8 +13,14 @@
          background-color: #646464
 
 
+
+
 // Large devices (desktops, less than 1200px)
 @media (min-width: 992px) and (max-width: 1199.98px)
+
+   html,body
+      overflow-x: hidden
+      ///pateicoties šim noņemās baltās svītras labajā stūrī (responsivitātes laikā var pamanīt atšķirību)
    .menu
       &_navigation
          margin-left: 175px
@@ -26,6 +33,8 @@
    footer
       .container
          background-color: #646464
+
+
 
 
 // Medium devices (tablets, less than 992px)
@@ -46,18 +55,18 @@
          top: 68.06px
       &_bar
          background-image: url("../icon/menu.png")
-
    .intro
-      bottom: 6.75px
-      width: 100%
+      bottom: -5.3px
       height: 406px
       &_video
          &_btn
             top: 162px
+   .about
+      p
+         width: 608px
    .agree
       &_container
          width: 100%
-
    .sponsors
       &_container
          .img1
@@ -72,14 +81,20 @@
          .img4 
             width: 49px
             height: 71px
-
    footer
       .container
          background-color: #757575
+         div:nth-child(2)
+               display: none
+         div:nth-child(3)
+               display: none
+
+
 
 
 // Small devices (landscape phones, less than 768px)
 @media (min-width: 576px) and (max-width: 767.98px)
+
    .intro
       width: 768px
       height: 406px
@@ -88,13 +103,31 @@
          background-color: #888888
 
 
+
+   
 // Extra small devices (portrait phones, less than 576px)
 @media (min-width: 320px) and (max-width: 575.98px)
+
+   .menu
+      // padding: 74.01px 0px 10px 62px
+      height: 74.01px
+      &_logo
+         top: 0px
+         &_img
+            width: 128px
+            height: 81px
+      &_navigation
+         display: none
+      &::after
+         background-image: url("../img/tablet/header_after.png")
+         top: 68.06px
+      &_bar
+         background-image: url("../icon/menu.png")
    .intro
-      // width: 320px
-      // height: 169px
-      width: 987px
-      height: 520px
+      width: 320px
+      height: 169px
+      // width: 987px
+      // height: 520px
    footer
       .container
          background-color: #888888
